Добавлен дефолтный метод в маппер короткого DTO продутка для формирования списка; Исправлены мапперы, чтобы убрать логику с БД; Добавлена возможность обновить все поля продукта; Исправлены аннотации валидации полей продукта